# crabbyshop

./: package-lock.json
api/: .env.example  Cargo.toml  Insomnia_2022-07-21.json  docker-compose.yml  jwtRSA256-public.pem
api/migrations/: 20220718205928_add_product_table.sql  20220719161819_add_product_inventory_table.sql  20220719162128_add_category_table.sql  20220719163400_add_discount_table.sql  20220719163620_add_product_relations.sql  20220722164453_add_product_flat_view.sql
api/src/: auth.rs  db.rs  errors.rs  lib.rs  main.rs
api/src/models/: authentication.rs  category.rs  discount.rs  mod.rs  product.rs  product_inventory.rs
api/src/routes/: category.rs  discount.rs  mod.rs  product.rs  product_inventory.rs
web-admin/: package-lock.json  package.json  tailwind.config.cjs
web-admin-react/: index.html  package.json
web-admin-react/src/: App.tsx  main.tsx
web-admin-react/src/components/: Counter.tsx  Navbar.tsx  Sidebar.tsx  SidebarItem.tsx
web-admin-react/src/data/: products.ts
web-admin-react/src/routes/: Products.tsx
web-admin-react/src/types/: category.ts  discount.ts  inventory.ts  product.ts
web-admin/src/routes/: index.svelte
