[package]
name = "crabbyshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/pintariching/Rocket", branch = "master", default-features = false, features = [ "json" ] }
rocket_db_pools = { git = "https://github.com/pintariching/Rocket", branch = "master", features = [ "sqlx_postgres" ]}

sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "decimal", "chrono" ]}
chrono = { version = "0.4.19", features = ["serde"] }
validator = { git = "https://github.com/pintariching/validator", branch = "accept-const-variable-in-message", features = ["derive"] }

dotenv = "0.15.0"
serde = "1.0.139"

jsonwebtoken = "8.1.1"
argon2 = "0.4.1"
rand_core = { version = "0.6.3", features = ["std"] }