[package]
name = "crabbyshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.15" }
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tower-http = { version = "0.3.4", features = ["trace"] }

sqlx = { version = "0.6.1", features = [ "runtime-tokio-rustls", "postgres", "macros", "migrate", "decimal", "chrono" ]}
chrono = { version = "0.4.21", features = ["serde"] }
validator = { version = "0.16.0", features = ["derive"] }

dotenv = "0.15.0"
serde = "1.0.143"

jsonwebtoken = "8.1.1"
argon2 = "0.4.1"
rand_core = { version = "0.6.3", features = ["std"] }